--- a/A04_Portfolios_Advanced.Rmd
+++ b/A04_Portfolios_Advanced.Rmd
@@ -664,6 +664,232 @@ chart.EF.Weights(prt_eff_maxq, colorset=rainbow(n = length(stockselection)), mat
 
 Have a look at `demo(regime_switching)` and estimate and rebalance portfolios based on 2/3 regimes. Can you plot the regimes over time?
 
+```{r}
+# Load package and data.
+library(PortfolioAnalytics)
+```
+
+
+```{r}
+# Get monthly stock returns from the S&P500
+monthly_returnsSP500 <- "^GSPC" %>%
+  tq_get(get = "stock.prices", from = "2000-01-01", to = "2019-08-31") %>%
+  tq_transmute(adjusted, periodReturn, period = "monthly", col_rename = "returns SP500")
+monthly_returnsSP500
+```
+
+```{r}
+# Calculate the rolling mean monthly
+
+rollmeanSP500 <- rollmean(monthly_returnsSP500[, "returns SP500"], 2)
+rollmeanSP500
+
+```
+
+```{r}
+vector <- c(rollmeanSP500)
+
+#2=good economy, 1=bad economy
+regime1or2 <-as.numeric(vector>0)+1
+regime1or2
+```
+
+
+```{r}
+SP500dates <- select(monthly_returnsSP500,date)
+
+
+#regime 1 is bad market phase (1) and regime 2 is good market phase (2)
+data_frame <- data.frame(SP500dates[2:236,], regime1or2)
+data_frame
+
+
+
+
+
+```
+
+```{r}
+regime_xts <-data_frame %>%
+  select(date, regime1or2)%>%
+  timetk::tk_xts(silent = TRUE)
+regime_xts
+```
+
+
+```{r}
+stockselection <- c("ABCB", "AAPL", "ACLS", "ADBE", "ADTN", "AEHR", "AEIS", "AHPI", "AKAM", "AMZN")
+
+# Get the prices of the stocks to transmute it to returns
+
+stock.prices <- stockselection %>%
+  tq_get(get  = "stock.prices", from = "2000-01-01",to = "2018-08-31") %>%
+  group_by(symbol)
+
+# Create monthly returns
+stock.returns.monthly <- stock.prices %>%  
+  tq_transmute(select = adjusted,
+               mutate_fun = periodReturn,
+               period="monthly",
+               type="arithmetic",
+               col_rename = "Stock.returns"
+               )
+
+## Make a tibble with dates and returns for all stocks
+## Make 10 columns (each for every stock) with the simple returns from adjusted prices and convert to xts (necessary for Portfolioanalytics)
+
+R <- pivot_wider(stock.returns.monthly,
+                                                names_from = symbol,
+                                                values_from = c(Stock.returns))%>% 
+  timetk::tk_xts(date_var = date, silent = TRUE)
+
+
+
+colnames(R) <- c("ABCB", "AAPL", "ACLS", "ADBE", "ADTN", "AEHR", "AEIS", "AHPI", "AKAM", "AMZN")
+funds <- colnames(R)
+
+
+
+R %>% head()
+```
+
+
+```{r}
+# Construct portfolio for regime 1 - bad economy.
+## Here, the first regime is considered with a risk approach (Mean-ES portfolio and other constraints)   --> we optimize ES
+
+### Es = Conditional Value at risk: considers losses that exceed the value-at-risk and determines their average amount. 
+
+port1 <- portfolio.spec(funds)
+port1 <- add.constraint(port1, "weight_sum", min_sum=0.99, max_sum=1.01)
+port1 <- add.constraint(port1, "box", min=0.05, max=0.5)
+port1 <- add.objective(port1, type="risk", name="ES", arguments=list(p=0.9))
+port1 <- add.objective(port1, type="risk_budget", name="ES", 
+                       arguments=list(p=0.9), max_prisk=0.5)
+
+```
+
+
+```{r}
+## Construct portfolio for regime 2 - good economy.
+### Here regime 2 is a regime based on standard investment with volatility - here we used the standard deviation --> we optimize Stdev
+
+port2 <- portfolio.spec(funds)
+port2 <- add.constraint(port2, "weight_sum", min_sum=0.99, max_sum=1.01)
+port2 <- add.constraint(port2, "box", min=0, max=0.6)
+port2 <- add.objective(port2, type="risk", name="StdDev")
+port2 <- add.objective(port2, type="risk_budget", name="StdDev", max_prisk=0.5)
+```
+
+
+```{r}
+# Combine the portfolios.
+portfolios <- combine.portfolios(list(port1, port2))
+
+
+# Now we construct the regime model and corresponding portfolios to use for each regime.
+
+## we merge the portfolios and the regimes (because we cannot merge every single portfolio with the regimes)
+
+regime.port <- regime.portfolios(regime_xts, portfolios)
+regime.port
+```
+```{r}
+### This optimization should result in out portfolio for regime 2
+opt1 <- optimize.portfolio(R[1:(nrow(R)-1)], regime.port, 
+                           optimize_method="DEoptim", 
+                           search_size=2000, 
+                           trace=TRUE)
+```
+```{r}
+opt1
+opt1$regime
+```
+
+
+```{r}
+### This optimization should result in out portfolio for regime 1
+opt2 <- optimize.portfolio(R[1:(nrow(R)-1)], regime.port, 
+                           optimize_method="DEoptim", 
+                           search_size=2000, 
+                           trace=TRUE)
+```
+```{r}
+opt2
+opt2$regime
+```
+
+
+```{r}
+# We can extract which regime portfolio we optimized with at each rebalance date.  
+
+## If there are structural changes in the data series, maybe a date fits better in the other regime now
+lapply(opt.rebal$opt_rebalancing, function(x) x$regime)
+```
+
+
+```{r}
+## Extract the optimal weights at each rebalance date.
+wt <- extractWeights(opt.rebal)
+wt
+```
+
+
+```{r}
+## Extract the objective measures.
+obj <- extractObjectiveMeasures(opt.rebal)
+str(obj)
+obj
+```
+
+
+
+```{r}
+## Extract the stats.
+xt <- extractStats(opt.rebal)
+str(xt)
+```
+
+
+```{r}
+### Note that this returns a list of N elements for N regimes. We may have different objectives and/or a different number of objectives which makes returning a single xts object difficult/
+
+# Extract the optimal weights at each rebalance date.
+chart.Weights(opt.rebal, colorset=rainbow10equal)
+
+wt
+```
+
+```{r}
+# Chart the risk contribution for regime 1
+
+chart.RiskBudget(opt.rebal, match.col="ES", risk.type="percentage", 
+                 regime=1, colorset=rainbow10equal)
+
+opt2
+```
+
+
+```{r}
+# Chart the risk contribution for regime 2
+chart.RiskBudget(opt.rebal, match.col="StdDev", risk.type="percentage", 
+                 regime=2, colorset=rainbow10equal)
+
+opt1
+```
+
+```{r}
+# Chart the risk contribution for regime 2
+chart.RiskBudget(opt.rebal, match.col="StdDev", risk.type="percentage", 
+                 regime=2, colorset=rainbow10equal)
+
+opt1
+```
+
+
+
+
+
 ## Exercise 4: Single Index-Model
 
 Now we are going to estimate the Portfolio Input Parameters with the Single-Index Model. Use your ten assets and additionally choose the S&P500 as index (same returns etc).
