--- a/A04_Portfolios_Advanced.Rmd
+++ b/A04_Portfolios_Advanced.Rmd
@@ -1,12 +1,12 @@
 ---
 title: "Portfoliomanagement and Financial Analysis - Assignment 4"
 subtitle: "Submit until Monday 2019-10-07, 13:00"
-author: "Lastname, Surname"
+author: "Winder, Anna-Sophie"
 output: html_notebook
 ---
 
 ```{r load_packs}
-pacman::p_load(tidyverse,tidyquant,PortfolioAnalytics,nloptr)
+pacman::p_load(tidyverse,tidyquant,PortfolioAnalytics,nloptr, timetk, dplyr)
 ```
 
 **Please** remember to put your assignment solutions in `rmd` format using **many** chunks and putting readable text in between, similar to my examples given in Research Methods and Assignment 1! Also, each student has to select his own set of 10 stocks having data available as of `2000-01-01`. Select by Sharpe-ratio, dominance or any other method (e.g. matching your first name).
@@ -23,20 +23,754 @@ c) Maximum Quadratic Utility Portfolios
 
 checking for a variety of constraints (constraints that can be computed with the `ROI`-solver) and different rebalancing periods (as well as rolling windows/training periods) to find, what might deliver you the best portfolios performance (use appropriate statistics to decide on that).
 
+### Get the packages 
+
+```{r}
+
+# Load the necessary packages vignette("ROI_vignette")
+suppressMessages(library(PortfolioAnalytics))
+suppressMessages(library(foreach))
+suppressMessages(library(iterators))
+suppressMessages(library(ROI))
+suppressMessages(library(ROI.plugin.quadprog))
+suppressMessages(library(ROI.plugin.glpk))
+```
+
+### Personal Stock Selection
+
+First I need my stocks!
+I choose the following personal stockselection:
+
+* **MO    =     Altria Group Rg (Philip Morris Companies)       (Sektor: Basiskonsumgüt,    Industrie: Tabak            )**
+* **MDLZ  =     Mondelez International Inc.                     (Sektor: Basiskonsumgüt,    Industrie: Nahrungsmittel   )**
+* **PEP   =     PepsiCo Inc. (PEP)                              (Sektor: Basiskonsumgüt,    Industrie: Getränke         )**
+* **PM    =     Philip Morris International Inc.                (Sektor: Basiskonsumgüt,    Industrie: Tabak            )**
+* **KHC   =     The Kraft Heinz Company                         (Sektor: Basiskonsumgüt,    Industrie: Nahrungsmittel   )**
+
+*Attention not all stocks have data up to 2000, so a different start date was chosen ()*
+
+```{r}
+stockselection <- c("AMZN","NKE", "WMT","MSFT","JPM")
+
+# Get the prices of the stocks 
+stock.prices <- stockselection %>%
+  tq_get(get  = "stock.prices", from = "2010-08-31",to = "2020-10-08")  %>% 
+  group_by(symbol)
+
+# Output the first two entries of each stock!
+stock.prices %>% slice(1:2) 
+stock.prices %>%
+  ggplot(aes(x = date, y = adjusted, color = symbol)) +
+  geom_line() +
+  ggtitle("Price chart for all stocks - all in one")
+
+# Plotting the stock prices in each frame
+stock.prices %>%
+  ggplot(aes(x = date, y = adjusted)) +
+  geom_line() +
+  facet_wrap(~symbol, scales = "free_y") +
+  theme_classic() +
+  labs(x = "Date", y = "Price") +
+  ggtitle("Price chart all stocks - in each frame") 
+
+
+```
+
+```{r}
+
+# Create monthly returns by the tq_transmute() = adds new variables to an existing tibble;
+stock.returns.monthly <- stock.prices %>%
+  tq_transmute(select = adjusted,
+               mutate_fun = periodReturn,
+               period="monthly",
+               type="arithmetic",
+               col_rename = "Stock.returns"
+               )
+
+# Output the first two entries of each stock!
+stock.returns.monthly %>% slice(1:2) 
+
+# Make 10 columns (each for every stock) with the simple returns from adjusted prices and convert to xts
+stock.returns.monthly_xts <- pivot_wider(stock.returns.monthly,
+                                                names_from = symbol,
+                                                values_from = c(Stock.returns))%>%
+   tk_xts(date_var = date, silent = TRUE)
+
+# Output the first entries (simple returns from adjusted prices) of each stock!
+stock.returns.monthly_xts[1]
+
+# Plotting a performance summary chart 
+charts.PerformanceSummary(stock.returns.monthly_xts, 
+                          main="Performance summary")
+
+```
+
+### **a) Mean-Return**
+***Maximizing Mean Return Portfolio***
+### Theorie: Maximizing Mean Return with ROI
+
+The objective to maximize mean return is a linear problem of the form: $maximize_w=µˆ'\cdot w$
+Where µˆ is the estimated mean asset returns and w is the set of weights. Because this is a linear problem, it is well suited to be solved using a linear programming solver. For these types of problems, PortfolioAnalytics uses the ROI package with the glpk plugin.
+
+*Creating a portfolio object with the function "portfolio.spec()"*
+```{r}
+# Maximazing Mean Return 
+
+# Create a portfolio object
+portf_maxret <- portfolio.spec(assets=stockselection)
+
+# Creat min and max weights for the portfolio 
+min_w <- c(0.02, 0.02, 0.02, 0.02, 0.02)
+max_w <- c(0.60, 0.60, 0.60, 0.60, 0.60)
+
+# Add constraints to the portfolio object 
+portf_maxret <- add.constraint(portfolio=portf_maxret, type="full_investment")
+portf_maxret <- add.constraint(portfolio=portf_maxret, type="box", 
+                               min=min_w, 
+                               max=max_w)
+
+# Add objective to the portfolio object
+portf_maxret <- add.objective(portfolio=portf_maxret, type="return", name="mean") 
+```
+
+
+```{r}
+# Presentation of portfolio object
+print(portf_maxret)
+summary(portf_maxret)
+```
+
+***Optimazing Mean Return Portfolio***
+```{r}
+# Run the optimization --> Method = ROI
+opt_maxret <- optimize.portfolio(R=stock.returns.monthly_xts, portfolio=portf_maxret,
+                                 optimize_method="ROI", trace = TRUE)
+print(opt_maxret)
+summary(opt_maxret)
+```
+
+```{r}
+# The opt_maxret object is of class optimize.portfolio.ROI and contains the following elements.
+names(opt_maxret)
+```
+
+```{r}
+# The value of the objective function at the optimum
+extractStats(opt_maxret)
+
+# The optimal weights at the optimum
+extractWeights(opt_maxret)
+```
+
+```{r}
+# The plot method charts of the optimal weights with the box constraints along with the optimal portfolio in risk-return space. The blue dots are the optimal weights and the gray triangles are the min and max of the box constraints.
+plot(opt_maxret, 
+     chart.assets=TRUE, 
+     xlim=c(0.06, 0.25),
+     ylim=c(-0.01, 0.01), 
+     main="Maximizing Mean Return with ROI ")
+```
+
+```{r}
+# The optimal portfolio can be plotted in "risk-return" space along with other feasible portfolios. The return metric is defined in the return.col argument and the risk metric is defined in the risk.col argument. The scatter chart includes the optimal portfolio (blue dot) and other feasible portfolios (gray circles) to show the overall feasible space given the constraints.
+
+chart.RiskReward(opt_maxret,
+                 eighbors = NULL,
+                 return.col="mean", risk.col="sd",
+                 element.color = "darkgray",
+                 chart.assets=TRUE, 
+                 xlim=c(0.02, 0.2), 
+                 ylim = NULL, 
+                 rp = FALSE,
+                 main="Maximizing Mean Return with ROI")
+```
+
+***Rebalancing Mean Return Portfolio***
+An out of sample backtest is run with "optimize.portfolio.rebalancing". In this example, an initial training period of 36 months is used and the portfolio is rebalanced quarterly.
+```{r}
+# Backtesting with
+# optimize_method   =   ROI
+# rebalance_on      =   month
+# training_period   =   2
+
+bt_maxret <- optimize.portfolio.rebalancing(R=stock.returns.monthly_xts ,portfolio=portf_maxret,
+                                            optimize_method="ROI",
+                                            rebalance_on="month",
+                                            training_period=10)
+
+# short overview of the backtesting weights over time
+head(extractWeights(bt_maxret)) 
+
+# Weights over time 
+chart.Weights(bt_maxret, main="Optimal Weights and Objective Measure at each Rebalance Period of MRP")
+
+# summary performance 
+returns_maxret <- Return.portfolio(R = stock.returns.monthly_xts, weights = extractWeights(bt_maxret))
+
+returns_maxret[1:4,1]
+
+charts.PerformanceSummary(returns_maxret)
+
+charts.PerformanceSummary(cbind (returns_maxret, stock.returns.monthly_xts),
+                          main="Performance summary with Portfolio MMR",
+                          event.labels = TRUE,
+                          wealth.index = TRUE)
+
+
+```
+
+### *b) Minimum-Variance*
+***Minimizing Portfolio Variance***
+```{r}
+# Create portfolio object
+portf_minvar <- portfolio.spec(assets=stockselection)
+# Add full investment constraint to the portfolio object.The only constraint specified is the full investment constraint!
+portf_minvar <- add.constraint(portfolio=portf_minvar, type="full_investment")
+# Add objective to minimize variance
+portf_minvar <- add.objective(portfolio=portf_minvar, type="risk", name="var")
+
+```
+
+***Optimazation Minimum Variance Portfolio***
+```{r}
+# Run the optimization
+opt_gmv <- optimize.portfolio(R=stock.returns.monthly_xts, portfolio=portf_minvar,
+                              optimize_method="ROI", trace=TRUE)
+print(opt_gmv)
+
+plot(opt_gmv, chart.assets=TRUE, xlim=c(0.06, 0.25),ylim=c(-0.01, 0.01), main="Minimizing Portfolio Varianc")
+chart.RiskReward(opt_gmv,
+                 neighbors = opt_maxret,
+                 return.col="mean", risk.col="sd",
+                 element.color = "darkgray",
+                 chart.assets=TRUE, 
+                 xlim=c(0.02, 0.2), 
+                 ylim = NULL, 
+                 rp = FALSE,
+                 main="Minimizing Portfolio Varianc ")
+
+
+```
+
+***Rebalancing Minimum Variance Portfolio***
+```{r}
+bt_gmv <- optimize.portfolio.rebalancing(R=stock.returns.monthly_xts,portfolio=portf_minvar,
+                                         optimize_method="ROI",
+                                         rebalance_on="month",
+                                         training_period=10)
+
+# short overview of the backtesting weights over time
+head(extractWeights(bt_gmv)) 
+
+# Weights over time 
+chart.Weights(bt_gmv,
+              main="Optimal Weights and Objective Measure at each Rebalance Period MVP.")
+
+# summary performance 
+returns_gmv <- Return.portfolio(R = stock.returns.monthly_xts, weights = extractWeights(bt_gmv))
+
+returns_gmv[1:4,1]
+charts.PerformanceSummary(returns_gmv)
+
+p.returns<-merge(returns_gmv,returns_maxret)
+
+names(p.returns)<-c("Rolling Global MaxRet","Rolling MaxRet")
+
+charts.PerformanceSummary(p.returns,
+                          main="Performance summary with Portfolio MaxRet and MinVar",
+                          event.labels = TRUE,
+                          wealth.index = TRUE)
+```
+
+***Constrained Minimum Variance Portfolio***
+```{r}
+# Add long only constraints
+portf_minvar <- add.constraint(portfolio=portf_minvar, type="box",
+                               min=0, max=1)
+# Add group constraints
+portf_minvar <- add.constraint(portfolio=portf_minvar,
+                               type="group",
+                               groups=list(groupA=1,
+                                           groupB=c(2, 3),
+                                           groupC=4),
+                               group_min=c(0, 0.25, 0.10),
+                               group_max=c(0.45, 0.6, 0.5))
+```
+
+***Optimization of Constrained Minimum Variance Portfolio***
+```{r}
+# Run the optimization
+opt_minvar <- optimize.portfolio(R=stock.returns.monthly_xts, portfolio=portf_minvar,
+                                 optimize_method="ROI", trace=TRUE)
+print(opt_minvar)
+extractStats(opt_minvar, prefix = NULL)
+plot(opt_minvar, chart.assets=TRUE, xlim=c(0.06, 0.25),ylim=c(-0.01, 0.01), main="Constrained Minimum Variance Portfoli")
+
+chart.RiskReward(opt_minvar,
+                 neighbors = NULL,
+                 return.col="mean", risk.col="sd",
+                 element.color = "darkgray",
+                 chart.assets=TRUE, 
+                 xlim=c(0.02, 0.2), 
+                 ylim = NULL, 
+                 rp = FALSE,
+                 main="Constrained Minimizing Portfolio Varianc ")
+```
+
+***Rebalancing of Constrained Minimum Variance Portfolio***
+```{r}
+bt_minvar <- optimize.portfolio.rebalancing(R=stock.returns.monthly_xts, portfolio=portf_minvar,
+                                            optimize_method="ROI",
+                                            rebalance_on="month",
+                                            training_period=10)
+
+bt_minvar
+
+# short overview of the backtesting weights over time
+head(extractWeights(bt_minvar)) 
+
+# Weights over time 
+chart.Weights(bt_minvar,
+              main="Optimal Weights and Objective 
+              Measure at each Rebalance Period of Constrained MVP.")
+
+# summary performance 
+returns_minvar <- Return.portfolio(R = stock.returns.monthly_xts, weights = extractWeights(bt_minvar))
+
+returns_minvar[1:4,1]
+
+charts.PerformanceSummary(returns_minvar)
+
+p.returns<-merge(returns_gmv,returns_maxret,returns_minvar)
+
+names(p.returns)<-c("Rolling Global MaxRet","Rolling MaxRet","Rolling MinVar")
+
+charts.PerformanceSummary(p.returns,
+                          main="Performance summary with Portfolio MaxRet and MinVar",
+                          event.labels = TRUE,
+                          wealth.index = TRUE)
+```
+
+
+### **c) Maximum Quadratic Utility Portfolios**
+checking for a variety of constraints (constraints that can be computed with the `ROI`-solver) and different rebalancing periods (as well as rolling windows/training periods) to find, what might deliver you the best portfolios performance (use appropriate statistics to decide on that).
+***Maximizing Quadratic Utility***
+```{r}
+# Create initial portfolio object
+init_portf <- portfolio.spec(assets=stockselection)
+# Create full investment constraint
+fi_constr <- weight_sum_constraint(type="full_investment")
+# Create long only constraint
+lo_constr <- box_constraint(type="long_only", assets=init_portf$assets)
+# Combine the constraints in a list
+qu_constr <- list(fi_constr, lo_constr)
+# Create return objective
+ret_obj <- return_objective(name="mean")
+# Create variance objective specifying a risk_aversion parameter which controls
+# how much the variance is penalized
+var_obj <- portfolio_risk_objective(name="var", risk_aversion=0.25)
+# Combine the objectives into a list
+qu_obj <- list(ret_obj, var_obj)
+```
+
+***Optimazation Maximizing Quadratic Utility***
+```{r}
+# Run the optimization
+opt_qu <- optimize.portfolio(R=stock.returns.monthly_xts, portfolio=init_portf,
+                             constraints=qu_constr,
+                             objectives=qu_obj,
+                             optimize_method="ROI",
+                             trace=TRUE)
+opt_qu
+
+plot(opt_qu, chart.assets=TRUE, xlim=c(0.06, 0.25),ylim=c(-0.01, 0.01), main="Maximizing Quadratic Utility")
+chart.RiskReward(opt_qu,
+                 neighbors = NULL,
+                 return.col="mean", risk.col="sd",
+                 element.color = "darkgray",
+                 chart.assets=TRUE, 
+                 xlim=c(0.02, 0.2), 
+                 ylim = NULL, 
+                 rp = FALSE,
+                 main="Maximizing Quadratic Utility ")
+```
+
+***Rebalancing Maximizing Quadratic Utility***
+```{r}
+bt_qu <- optimize.portfolio.rebalancing(R=stock.returns.monthly_xts, portfolio=init_portf,
+                                        constraints=qu_constr,
+                                        objectives=qu_obj,
+                                        optimize_method="ROI",
+                                        rebalance_on="month",
+                                        training_period=10)
+
+# short overview of the backtesting weights over time
+head(extractWeights(bt_qu)) 
+
+# Weights over time 
+chart.Weights(bt_qu,
+              main="Optimal Weights and Objective Measure at each Rebalance Period of MQU")
+
+
+# summary performance 
+returns_qu <- Return.portfolio(R = stock.returns.monthly_xts, weights = extractWeights(bt_qu))
+
+returns_qu[1:4,1]
+
+charts.PerformanceSummary(returns_qu)
+
+p.returns<-merge(returns_gmv,returns_maxret,returns_minvar, returns_qu)
+
+names(p.returns)<-c("Rolling Global MaxRet","Rolling MaxRet","Rolling MinVar","Rolling Quadratic Utility")
+
+charts.PerformanceSummary(p.returns,
+                          main="Performance summary with Portfolio MaxRet and MinVar and QuadUti",
+                          event.labels = TRUE,
+                          wealth.index = TRUE)
+```
+
+```{r}
+# Everything together ;)
+
+aa <- cbind (p.returns, stock.returns.monthly_xts)
+charts.PerformanceSummary(aa,
+                          main="Performance summary with Portfolio MaxRet and MinVar and QuadUti",
+                          event.labels = TRUE,
+                          wealth.index = TRUE)
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 ## Exercise 2: Custom moments function
 
 Check `vignette("custom_moments_objectives")` to implement a variety of robust covariance matrix estimates (see `?MASS::cov.rob`, `?PerformanceAnalytics::ShrinkageMoments` and maybe `?PerformanceAnalytics::EWMAMoments` - the latter one only for backtesting) for the minimum variance and quadratic utility portfolios. Plot the different Efficient frontiers, optimal portfolios and weights and visualize the different covariances. Also make yourselves comfortable with cleaning outliers from your timeseries via `return.Clean()`.
+
+**Get Data of 10 Stocks**
+```{r warning=FALSE, message=FALSE}
+#Created a vector with the stocks I want to observe
+stockselection <- c("AAPL", "MSFT", "AMZN", "PFE", "JPM", "CSCO", "XOM", "BAC", "NKE", "WMT")
+
+
+#Get the prices of the stocks to transmute it to returns
+stock.prices <- stockselection %>%
+  tq_get(get  = "stock.prices", from = "2000-01-01",to = "2018-08-31") %>%
+  group_by(symbol)
+
+#Create monthly returns
+stock.returns.monthly <- stock.prices %>%  
+  tq_transmute(select = adjusted,
+               mutate_fun = periodReturn,
+               period="monthly",
+               type="arithmetic",
+               col_rename = "Stock.returns"
+               )
+
+#Make 10 columns (each for every stock) with the simple returns from adjusted prices and convert to xts
+
+
+stock.returns.monthly_xts_withoutliners <- pivot_wider(stock.returns.monthly,names_from = symbol,
+values_from = c(Stock.returns))%>% 
+  tk_xts(date_var = date, silent = TRUE)
+
+stock.returns.monthly_xts <- Return.clean(stock.returns.monthly_xts_withoutliners, method = "boudt", alpha = 0.01)
+```
+
+**create initial minimum variance portfolio**
+```{r}
+# Construct initial portfolio with basic constraints.
+init.port.minv <- portfolio.spec(assets=colnames(stock.returns.monthly_xts),category_labels = stockselection)
+init.port.minv <- add.constraint(portfolio=init.port.minv, type="full_investment")
+#init.port.minv <- add.constraint(portfolio=init.port.minv, type="long_only")
+
+#Portfolio with standard deviation as an objective
+SD.port.minv <- add.objective(portfolio=init.port.minv, type="risk", name="StdDev")
+```
+**create initial maximize quadratic utility portfolio**
+```{r}
+# Construct initial portfolio with basic constraints.
+init.port.maxq <- portfolio.spec(assets=colnames(stock.returns.monthly_xts),category_labels = stockselection)
+
+#init.port.maxq <- add.constraint(init.port.maxq, type = "box", min = 0, max = 1)
+init.port.maxq <- add.constraint(portfolio=init.port.maxq, type="full_investment")
+init.port.maxq <- add.constraint(portfolio=init.port.maxq, type="long_only")
+
+#Portfolio with standard deviation as an objective
+SD.port.maxq <- add.objective(portfolio=init.port.maxq, type="return", name="mean")
+SD.port.maxq <- add.objective(portfolio=SD.port.maxq, type="risk", name="var", risk_aversion=0.25)
+```
+**function to estimate covariance matrix with cov.rob for minimum variance**
+```{r}
+sigma.robust <- function(R){
+    require(MASS)
+    out <- list()
+    out$sigmarob <- cov.rob(R, method="mcd")$cov
+    return(out)}
+
+sigmarob <- sigma.robust(stock.returns.monthly_xts)$sigmarob
+```
+
+**function to estimate covariance matrix with ShrinkageMoments for minimum variance** 
+```{r}
+
+sigma.robust.shrink <- function(R){
+    targets <- c(1,3,4)
+    f <- rowSums(stock.returns.monthly_xts)
+    out <- list()
+    out$sigmashrink <- M2.shrink(stock.returns.monthly_xts, targets, f)$M2sh
+    return(out)
+}
+
+
+sigma.shrink <- sigma.robust.shrink(stock.returns.monthly_xts)$sigmashrink
+```
+
+**Optimize portfolios**
+```{r message=FALSE, warning=FALSE}
+
+opt.sd.minv <- optimize.portfolio(stock.returns.monthly_xts, SD.port.minv, optimize_method="ROI", momentFUN="sigma.robust", trace = TRUE)
+
+opt.sd.maxq <- optimize.portfolio(stock.returns.monthly_xts, SD.port.maxq, optimize_method="ROI", momentFUN="sigma.robust", trace = TRUE)
+
+opt.sd.minv.shrink <- optimize.portfolio(stock.returns.monthly_xts, SD.port.minv, optimize_method="ROI", momentFUN="sigma.robust.shrink", trace = TRUE)
+
+opt.sd.maxq.shrink <- optimize.portfolio(R=stock.returns.monthly_xts, portfolio=SD.port.maxq, optimize_method="ROI", momentFUN="sigma.robust.shrink", trace = TRUE)
+
+
+weights <- extractWeights(opt.sd.minv)
+sigmarob <- sigma.robust(stock.returns.monthly_xts)$sigmarob
+sqrt(t(weights) %*% sigmarob %*% weights)
+
+#extractObjectiveMeasures(opt.sd)$StdDev
+```
+**Plot the covariance matrix from cov.rob**
+```{r echo = FALSE}
+chart.Correlation(sigmarob, histogram = TRUE)
+
+```
+**Plot the covariance matrix from shrink**
+```{r echo = FALSE}
+chart.Correlation(sigma.shrink, histogram = TRUE)
+```
+**Plot the Portfolios**
+```{r echo = FALSE}
+plot(opt.sd.minv, risk.col="StdDev", return.col="mean", main="Minimum Variance Optimization", chart.assets=TRUE, xlim=c(0, 0.2), ylim=c(0,0.02))
+
+
+plot(opt.sd.minv.shrink, risk.col="StdDev", return.col="mean", main="Minimum Variance Optimization shrink", chart.assets=TRUE, xlim=c(0, 0.2), ylim=c(0,0.02))
+
+plot(opt.sd.maxq, risk.col="StdDev", return.col="mean", main="Quadratic Utility Optimization", chart.assets=TRUE, xlim=c(0, 0.2), ylim=c(0,0.05))
+
+
+plot(opt.sd.maxq.shrink, risk.col="StdDev", return.col="mean", main="Quadratic Utility Optimization shrink", chart.assets=TRUE, xlim=c(0, 0.2), ylim=c(0,0.05))
+```
+**Chart Efficient Frontiert for the minimum variance Portfolio**
+```{r echo = FALSE}
+prt_eff_minv <- create.EfficientFrontier(R=stock.returns.monthly_xts, portfolio=SD.port.minv, type="mean-StdDev", match.col = "StdDev")
+chart.EfficientFrontier(prt_eff_minv, match.col="StdDev", type="b", rf=NULL, pch.assets = 1)
+chart.EF.Weights(prt_eff_minv, colorset=rainbow(n = length(stockselection)), match.col="StdDev", cex.lab = 1, main = "StdDev")
+```
+**Chart Efficient Frontiert for the quadratic utility Portfolio**
+```{r echo = FALSE}
+prt_eff_maxq <- create.EfficientFrontier(R=stock.returns.monthly_xts, portfolio=SD.port.maxq, type="mean-StdDev", match.col = "StdDev")
+chart.EfficientFrontier(prt_eff_maxq, match.col="StdDev", type="b", rf=NULL, pch.assets = 1)
+chart.EF.Weights(prt_eff_maxq, colorset=rainbow(n = length(stockselection)), match.col="StdDev", cex.lab = 1, main = "StdDev")
+```
 
 ## Exercise 3: Regime Switching
 
 Have a look at `demo(regime_switching)` and estimate and rebalance portfolios based on 2/3 regimes. Can you plot the regimes over time?
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 ## Exercise 4: Single Index-Model
 
 Now we are going to estimate the Portfolio Input Parameters with the Single-Index Model. Use your ten assets and additionally choose the S&P500 as index (same returns etc).
 
+```{r}
+stockselection_4 <- c("AAPL", "MSFT", "AMZN", "PFE", "JPM", "CSCO", "XOM", "BAC", "NKE", "WMT", "^GSPC")
+
+#Get the prices of the stocks
+stock.prices_4 <- stockselection_4 %>%
+  tq_get(get  = "stock.prices", from = "2000-01-01",to = "2019-10-06") %>%
+  group_by(symbol)
+stock.returns.monthly_4 <- stock.prices_4 %>%  
+  tq_transmute(select = adjusted,
+               mutate_fun = periodReturn,
+               period="monthly",
+               type="arithmetic",
+               col_rename = "Stock.returns")
+
+stock.returns.monthly_xts_4 <- pivot_wider(stock.returns.monthly_4,names_from = symbol, values_from = c(Stock.returns))%>%
+  tk_xts(date_var = date, silent = TRUE)
+```
+
+
 a) Regress all stocks on the index. Show alpha, beta and residual variance. Calculate systematic and firm-specific risk. Are there any significant alphas? (You should double check with the appropriate `PerformanceAnalytics` Functions)
+
+Regress all stocks on the index
+```{r}
+alpha.Stocks <- CAPM.alpha(Ra = stock.returns.monthly_xts_4[,-11], Rb = stock.returns.monthly_xts_4[,11], Rf = 0)
+beta.Stocks <- CAPM.beta(Ra = stock.returns.monthly_xts_4[,-11], Rb = stock.returns.monthly_xts_4[,11], Rf = 0)
+StdDev.Index <- StdDev(R = stock.returns.monthly_xts_4[,11],
+                   clean = "none",
+                   method = "pearson")
+
+lm(stock.returns.monthly_xts_4[,-11] ~ stock.returns.monthly_xts_4[,11])
+
+
+plot.default(x = stock.returns.monthly_xts_4[, 11], y = stock.returns.monthly_xts_4[, 1], main = "Apple Regression", xlab = "Index Returns", ylab = "Stock Returns", abline(lm(stock.returns.monthly_xts_4[, 1] ~ stock.returns.monthly_xts_4[, 11])))
+plot.default(x = stock.returns.monthly_xts_4[, 11], y = stock.returns.monthly_xts_4[, 2], main = "Microsoft Regression", xlab = "Index Returns", ylab = "Stock Returns", abline(lm(stock.returns.monthly_xts_4[, 2] ~ stock.returns.monthly_xts_4[, 11])))
+plot.default(x = stock.returns.monthly_xts_4[, 11], y = stock.returns.monthly_xts_4[, 3], main = "Amazon Regression", xlab = "Index Returns", ylab = "Stock Returns", abline(lm(stock.returns.monthly_xts_4[, 3] ~ stock.returns.monthly_xts_4[, 11])))
+plot.default(x = stock.returns.monthly_xts_4[, 11], y = stock.returns.monthly_xts_4[, 4], main = "Pfizer Regression", xlab = "Index Returns", ylab = "Stock Returns", abline(lm(stock.returns.monthly_xts_4[, 4] ~ stock.returns.monthly_xts_4[, 11])))
+plot.default(x = stock.returns.monthly_xts_4[, 11], y = stock.returns.monthly_xts_4[, 5], main = "JPMorgan Regression", xlab = "Index Returns", ylab = "Stock Returns", abline(lm(stock.returns.monthly_xts_4[, 5] ~ stock.returns.monthly_xts_4[, 11])))
+plot.default(x = stock.returns.monthly_xts_4[, 11], y = stock.returns.monthly_xts_4[, 6], main = "Cisco Regression", xlab = "Index Returns", ylab = "Stock Returns", abline(lm(stock.returns.monthly_xts_4[, 6] ~ stock.returns.monthly_xts_4[, 11])))
+plot.default(x = stock.returns.monthly_xts_4[, 11], y = stock.returns.monthly_xts_4[, 7], main = "ExxonMobile", xlab = "Index Returns", ylab = "Stock Returns", abline(lm(stock.returns.monthly_xts_4[, 7] ~ stock.returns.monthly_xts_4[, 11])))
+plot.default(x = stock.returns.monthly_xts_4[, 11], y = stock.returns.monthly_xts_4[, 8], main = "Bank of America", xlab = "Index Returns", ylab = "Stock Returns", abline(lm(stock.returns.monthly_xts_4[, 8] ~ stock.returns.monthly_xts_4[, 11])))
+plot.default(x = stock.returns.monthly_xts_4[, 11], y = stock.returns.monthly_xts_4[, 9], main = "Nike Regression", xlab = "Index Returns", ylab = "Stock Returns", abline(lm(stock.returns.monthly_xts_4[, 9] ~ stock.returns.monthly_xts_4[, 11])))
+plot.default(x = stock.returns.monthly_xts_4[, 11], y = stock.returns.monthly_xts_4[, 10], main = "Walmart Regression", xlab = "Index Returns", ylab = "Stock Returns", abline(lm(stock.returns.monthly_xts_4[, 10] ~ stock.returns.monthly_xts_4[, 11])))
+```
+Calculate systematic (Market-Specific) Risk by mulitplying Variance (StdDev^2) of the S&P500 and the Beta^2 of each stock
+```{r}
+sys.risk <- SystematicRisk(Ra = stock.returns.monthly_xts_4[,-11], Rb = stock.returns.monthly_xts_4[,11], Rf = 0)
+sys.risk
+```
+Calculate Firm-specific Risk / Residual Variance
+```{r}
+firm.specific.risk <- SpecificRisk(Ra = stock.returns.monthly_xts_4[,-11], Rb = stock.returns.monthly_xts_4[,11], Rf = 0)
+firm.specific.risk
+```
+Summary
+```{r}
+summary.SFM <- table.SFM(Ra = stock.returns.monthly_xts_4[,-11], Rb = stock.returns.monthly_xts_4[,11], scale = NA, Rf = 0, digits = 6)
+summary.SFM
+
+```
+
+
 b) Extract the betas and calculate systematic and unsystematic risk, derive the whole covariance matrix. To do this you can use _CH15_Factor_Modfels_for_Asset_Returns.pdf (15.3.1)_ and the code
 implemented in the function sharpeFactorEstimator that you find [here](http://financewithr.blogspot.com/2013/06/portfolio-optimization-using-single.html) (please do not just copy everything, but try to understand what you are doing, e.g. check why and if G.hat has the same values as found by the multivariate regression).
+
+
+
+Calculate Beta of Portfolio by average each stocks beta
+```{r}
+beta.portfolio <- mean(beta.Stocks)
+beta.portfolio
+```
+
+Calculate systematic (Market-Specific) Risk of portfolio
+```{r}
+sys.risk.portfolio <- mean(sys.risk)
+sys.risk.portfolio
+```
+
+Calculate unsystematic risk by calculating the mean of the firm-specific risk
+```{r}
+unsys.risk.portfolio <- mean(firm.specific.risk)
+unsys.risk.portfolio
+```
+
+Calculate Covariance Matrix
+```{r}
+stock.returns.monthly_data <- as.data.frame((stock.returns.monthly_xts_4))
+data(stock.returns.monthly_data)
+returns <- as.timeSeries(stock.returns.monthly_data[,-11])
+factors <- as.vector(as.timeSeries(stock.returns.monthly_data)[,11])
+names(data)
+data <- returns
+attr(data, "factors") <- factors
+nScenarios <- nrow(data)
+X.mat <- cbind(rep(1, times=nScenarios), factors)
+G.hat <- solve(qr(X.mat), data) #G.hat is alpha
+beta.hat <- G.hat[2, ] #is beta
+eps.hat <- data - X.mat %*% G.hat
+diagD.hat <- diag(crossprod(eps.hat) / (nScenarios-2))
+cov.si = var(factors)*(beta.hat%o%beta.hat) + diag(diagD.hat)
+cov.si
+```
+
+
 c) Now use the _custom-moments_ functions from Exercise 2 to implement the single-factor model into the portfolio optimization framework and plot the efficient frontier using the parameters estimated by the single factor model next to the EF of the full-covariance model. Calculate MVP, TP etc. and work out the differences in weights, portfolio return and portfolio risk.
 
+
+```{r}
+
+#Function to implement single-factor model into the portfolio optimization framework
+data(stock.returns.monthly_xts_4)
+returns <- as.timeSeries(stock.returns.monthly_xts_4)
+names(data)
+data <- returns[, -c(11)]
+factors <- returns[, 11]
+attr(data, "factors") <- factors
+# Sharpe's Single Index Factor Model:
+sharpeFactorEstimator <- 
+function(x, spec=NULL, ...)
+{
+    # Sharpe Single Index Model:
+    data <- getDataPart(x)
+    factors <- attr(x, "factors")
+    nScenarios <- nrow(data)
+    X.mat <- cbind(rep(1, times=nScenarios), factors)
+    G.hat <- solve(qr(X.mat), data)
+    beta.hat <- G.hat[2, ]
+    eps.hat <- data - X.mat %*% G.hat
+    diagD.hat <- diag(crossprod(eps.hat) / (nScenarios-2))
+    mu <- G.hat[1, ] + G.hat[2, ] * colMeans(factors)  
+    Sigma <- var(factors)[[1]] * (beta.hat %o% beta.hat) + diag(diagD.hat)
+    
+    # Return Value:
+    list(mu = mu, Sigma = Sigma)
+}
+spec <- portfolioSpec()
+setEstimator(spec) <- "sharpeFactorEstimator"
+sharpe <- portfolioFrontier(data, spec)
+
+#Chart the efficient frontier using the parameters estimated by the single factor model
+sharpe_1 <- portfolioFrontier(data)
+tailoredFrontierPlot(sharpe_1)
+points(frontierPoints(sharpe), col = "steelblue")
+
+
+#Chart Efficient Frontier minimum variance
+chart.EfficientFrontier(prt_eff_minv, match.col="StdDev", type="b", rf=NULL, pch.assets = 1)
+```
